# alauncher

./: .gitignore  CMakeLists.txt  README.md  bin2h.cmake
src/: main.c
tools/: create_config.py  requirements.txt
